<resources>
    <string name="app_name">SpringProjectStationBuild</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Heading">CheckBox-Check</string>
    <string name="checkBox1_text">GPU</string>
    <string name="checkBox2_text">CPU</string>
    <string name="checkBox3_text">Cooling Fans</string>
    <string name="checkBox4_text">Mouse</string>
    <string name="checkBox5_text">Keyboard</string>
    <string name="submitButton">NEXT</string>

    <!-- Login Activity  -->

    <string name="login_form_title">Login</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">LOGIN</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
